# rust-server

./: Cargo.toml  Dockerfile  README.md
nginx/: Dockerfile  dockerPing.sh  nginx.conf
src/: defs.rs  main.rs  open_file.rs  request.rs  response.rs  server.rs  taskpool.rs
src/balancer/: mod.rs  task_pool.rs
src/handler/: mime.rs  mod.rs  open_file.rs  request.rs  response.rs
