[package]
name = "rust_server"
version = "0.1.0"
authors = ["MBtsky <9250499222@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
rand = "0.7.3"
percent-encoding = "2.1.0"
httpdate = "0.3.2"
num_cpus = "1.13.0"
[dependencies.async-std]
version = "1.6.3"
features = ["attributes", "unstable", "tokio02"]
